--- a/index.html
+++ b/index.html
@@ -1,11 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+
+        <!-- Sivun otsikko, joka näkyy selaimen välilehdellä -->
+        <title>Maija Meikäläinen - Portfolio</title>
+
+
+        <!-- Font Awesome ikonit -->
+        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+        <!-- Sivun perustyyli-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link href="css/basestyles.css" rel="stylesheet" />
+
+        <!-- Omat tyylit -->
+        <link href="css/custom.css" rel="stylesheet" />
+    </head>
+
+    <body id="page-top">
+        <!-- Navigaatio-->
+        <nav class="navbar navbar-expand-lg text-uppercase fixed-top" id="mainNav">
+            <div class="container">
+
+                <!-- Sivuston nimi -->
+                <a class="navbar-brand" href="#page-top">Maija Meikäläinen</a>
+
+                <button class="navbar-toggler text-uppercase font-weight-bold text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fas fa-bars menu-icon"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ms-auto">
+
+                        <!-- Navigaation linkit -->
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">Portfolio</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#yhteys">Yhteystiedot</a></li>
+
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <!-- "Hero", eli iso kuva ja otsikko sekä alkuteksti-->
+        <header class="masthead text-white text-center">
+            <div class="container d-flex align-items-center flex-column">
+
+                <!-- Vaihda tähän oma kuvasi -->
+                <img class="masthead-avatar mb-5" src="img/girl.png" alt="..." />
+
+                <!-- Tähän oma nimesi -->
+                <h1 class="masthead-heading text-uppercase mb-0">Maija Meikäläinen</h1>
+
+                
+                <div class="divider-custom divider-light">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <!-- Tähän lyhyesti tietoa sinusta-->
+                <p class="masthead-subheading font-weight-light mb-0">Ohjelmistokehityksen opiskelija - Tuleva ammattilainen</p>
+            </div>
+        </header>
+        <!-- Portfolio Section-->
+        <section class="page-section portfolio" id="portfolio">
+            <div class="container">
+                <!-- Portfolio Section Heading-->
+                <h2 class="page-section-heading text-center text-uppercase mb-0">Portfolio</h2>
+                <!-- Icon Divider-->
+                <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+
+
+                <!-- Projektit-->
+                <div class="row justify-content-left">
+
+                    <!-- Kopioi tämä osuus niin monta kertaa, kun projekteja on-->
+                    <div class="col-md-12 col-lg-12 mb-3">
+                        <div class="card projekti-kortti">
+                            <div class="card-body">
+                              <h4 class="card-title">Ekan projektin nimi</h4>
+                              <h5 class="card-subtitle mb-2 text-muted">Kurssi tai asiakas / 2023</h5>
+                              <p class="card-text">Projektissa tein sitä tätä ja tuota. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed posuere interdum sem. Quisque ligula eros ullamcorper quis, lacinia quis facilisis sed sapien. Mauris varius diam vitae arcu.</p>
+                              <h6 class="projekti-teknologiat">Käytetyt teknologiat</h6>
+
+                              <!-- Lisää, muokkaa ja poista badgeja tarpeen mukaan-->
+                              <span class="badge">HTML</span>
+                              <span class="badge">CSS</span>
+                              <span class="badge">JavaScript</span>
+
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+
+                    <!-- Kopioi tämä osuus niin monta kertaa, kun projekteja on-->
+                    <div class="col-md-12 col-lg-12 mb-3">
+                        <div class="card projekti-kortti">
+                            <div class="card-body">
+                              <h4 class="card-title">Tokan projektin nimi</h4>
+                              <h5 class="card-subtitle mb-2 text-muted">Kurssi tai asiakas / 2023</h5>
+                              <p class="card-text">Projektissa tein sitä tätä ja tuota. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed posuere interdum sem. Quisque ligula eros ullamcorper quis, lacinia quis facilisis sed sapien. Mauris varius diam vitae arcu.</p>
+                              <h6 class="projekti-teknologiat">Käytetyt teknologiat</h6>
+
+                              <!-- Lisää, muokkaa ja poista badgeja tarpeen mukaan-->
+                              <span class="badge">HTML</span>
+                              <span class="badge">CSS</span>
+                              <span class="badge">JavaScript</span>
+
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+
+
+
+                </div>
+            </div>
+        </section>
+        <!-- Yhteystiedot -->
+        <footer class="footer text-center" id="yhteys">
+            <div class="container">
+                <div class="row">
+                    <!-- Yhteystiedot sähköposti -->
+                    <div class="col-lg-6 mb-6 mb-lg-0">
+                        <h4 class="text-uppercase mb-4">Sähköposti</h4>
+                        <p class="lead mb-0">
+                            matti.meikalainen@email.fi
+                        </p>
+                    </div>
+                    <!-- Yhteystiedot somelinkit -->
+                    <div class="col-lg-6 mb-6 mb-lg-0">
+                        <h4 class="text-uppercase mb-4">Seuraa minua</h4>
+
+                        <!-- Muista vaihtaa #! tilalle oikea linkki!-->
+                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-github"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-youtube"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-tiktok"></i></a>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!-- Copyright -->
+        <div class="copyright py-4 text-center text-white">
+            <div class="container"><small>&copy; Maija Meikäläinen 2023</small></div>
+        </div>
+
+
+
+
+
+
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+    </body>
 </html>
